# ChangeLog for net-misc/iperf
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/iperf/ChangeLog,v 1.25 2009/03/25 17:59:21 tcunha Exp $

  25 Mar 2009; Tiago Cunha <tcunha@gentoo.org> iperf-2.0.4.ebuild:
  keyworded ~arch for sparc, bug 263724

*iperf-2.0.4 (30 Jul 2008)

  30 Jul 2008; Jeroen Roovers <jer@gentoo.org> +iperf-2.0.4.ebuild:
  Version bump thanks to Jeff Waller (bug #233215).

  12 Jun 2007; Joe Peterson <lavajoe@gentoo.org> iperf-2.0.2.ebuild:
  Add ~x86-fbsd keyword

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> iperf-2.0.2.ebuild:
  Stable on ppc64

  17 Mar 2007; Steve Dibb <beandog@gentoo.org> iperf-2.0.2.ebuild:
  amd64 stable

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org> iperf-2.0.2.ebuild:
  x86 stable

  20 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  19 Nov 2006; Guy Martin <gmsoft@gentoo.org> iperf-2.0.2.ebuild:
  Stable on hppa.

  04 Dec 2005; Tom Gall <tgall@gentoo.org> iperf-2.0.1.ebuild:
  stable on ppc64

  29 Nov 2005; <dang@gentoo.org> iperf-2.0.1.ebuild:
  Marked stable on amd64

*iperf-2.0.2 (11 Aug 2005)

  11 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> +iperf-2.0.2.ebuild:
  Version bump for bug 101960.

  09 Aug 2005; Brent Baude <ranger@gentoo.org> iperf-1.7.0.ebuild:
  Adding ~ppc64 keyword to the 1.70 iperf ebuild. This is the "stable" version
  according to their website.

  10 May 2005; Herbie Hopkins <herbs@gentoo.org> iperf-2.0.1.ebuild:
  Marked ~amd64 wrt bug #92149.

  06 May 2005; Omkhar Arasaratnam <omkhar@gentoo.org> iperf-2.0.1.ebuild:
  Added ~ppc64 wrt #91738

  25 Feb 2005; Aaron Walker <ka0ttic@gentoo.org> iperf-2.0.1.ebuild:
  Marked stable on x86.

*iperf-2.0.1 (23 Jan 2005)

  23 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> +files/iperf.confd,
  files/iperf.initd, +iperf-2.0.1.ebuild:
  Version bump for bug 77616; added conf.d file as well.
