@@ -1,6 +1,6 @@
 AUX iperf.confd 308 RMD160 fcaf0a1be69f6265465abab1d0ef664c29923fca SHA1 21532c86c19942030d1b329da136f6cefe1be381 SHA256 11dfe3580458416c9a71b516655df0968f277197f090212d378efe62aacaef9f
 AUX iperf.initd 521 RMD160 05539f95e98815fcd6348b0ed785961ec174b04b SHA1 57265f028c655c2e676559a192376a8ac910643e SHA256 929f5f87ccff042d6b14a4cf4880218fea802cd1b2f66f9bdda8dfac3052c7d7
 DIST iperf-2.0.4.tar.gz 248493 RMD160 b021cc5f2a05465ff04d4b914c94692489e49a9e SHA1 78b6b78789eccf42b5deb783bd8a92469d1383e1 SHA256 3b52f1c178d6a99c27114929d5469c009197d15379c967b329bafb956f397944
-EBUILD iperf-2.0.4.ebuild 989 RMD160 12899e9c8c276c8573f7866e23fd55c21c892975 SHA1 8d49a45fe9cf88d9d5730735ca801a13a2d473c3 SHA256 47c7c0fa90c11c0c4348442238d2a8ed138a63b79680366288be7de635045096
-MISC ChangeLog 2753 RMD160 9e223212189b3c905e63d8c6d8773b1400b49fd8 SHA1 51ddd52b53d5d90cb7def0b32dc610a7d30c28b3 SHA256 332791c0e2df932833f46472b2116471842e4840c80fa26f3a2c8698c66206b9
+EBUILD iperf-2.0.4.ebuild 990 RMD160 fb92be4b47b384e62032d7ade9eaa1011957dcee SHA1 9067e449768f2898866f952acb640f794a518a49 SHA256 d6c8a818e2ace7a93e70cdfaa8262c3c038a7630445a643fca082a0840d6ff5d
+MISC ChangeLog 2940 RMD160 44e12ec78a3c5d8939584da6be3c71dea8188d2d SHA1 20554800e7a3003057c019fa3d832861e1de992a SHA256 9ec04ebe69722c1a3e6edd6b6a0d21d9beff058bf1e2b50374bb2acde4c484ca
 MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
