@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/iperf
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/iperf/ChangeLog,v 1.25 2009/03/25 17:59:21 tcunha Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/iperf/ChangeLog,v 1.27 2009/05/26 04:13:19 jer Exp $
+
+  26 May 2009; Jeroen Roovers <jer@gentoo.org> iperf-2.0.4.ebuild:
+  Fix quoting issue.
+
+  26 May 2009; Jeroen Roovers <jer@gentoo.org> iperf-2.0.4.ebuild:
+  Stable for HPPA (bug #263878).
 
   25 Mar 2009; Tiago Cunha <tcunha@gentoo.org> iperf-2.0.4.ebuild:
   keyworded ~arch for sparc, bug 263724
